--- a/templates/setting_ally_config.mustache
+++ b/templates/setting_ally_config.mustache
@@ -24,6 +24,6 @@
         "href": "http://mymoodle.com/admin/tool/ally/autoconfigws.php"
     }
 }}
-<div class="ally-auto-config">
-    <a href="{{{href}}}">{{#str}} autoconfigure, tool_ally {{/str}}</a>
+<div class="ally-config-row">
+    <a href="{{{href}}}">{{linktitle}}</a>
 </div>
